# celp-gst-plugin

./: .gitignore  CMakeLists.txt  README.md  test-commands.md
src/: gstcelp.c  gstcelpdec.c  gstcelpdec.h  gstcelpenc.c  gstcelpenc.h
